# nael

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: code_changes.yml  crate_changes.yml  release.yml
crates/cli/src/: formatting.rs  main.rs
crates/cli/src/commands/: active.rs  info.rs  install.rs  list.rs  mod.rs  remove.rs  symlink_path.rs  update.rs  update_all.rs  use.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/dalamud/: declarative.rs  management.rs  mod.rs  sources.rs  version_info.rs
crates/core/src/fs/: archive.rs  mod.rs  storage.rs
crates/core/src/net/: mod.rs  remote_resource.rs
src/: dalamud_version_manager.rs  directories.rs  logger.rs  main.rs  repository.rs
src/commands/: current.rs  install.rs  list.rs  mod.rs  remove.rs  update.rs  use.rs
src/fs/: archive.rs  directory.rs  mod.rs  symlink.rs
src/net/: mod.rs  remote_file.rs
src/repository/: dist_repository.rs  mod.rs
