[package]
name = "nael"
description = "Install and manage different branches of Dalamud with ease."
version = "0.1.1"
authors = ["Blooym"]
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"
edition = "2021"
categories = ["command-line-utilities"]
homepage = "https://github.com/Blooym/Nael"
repository = "https://github.com/Blooym/Nael"
publish = true
keywords = ["dalamud", "version-manager", "cli", "ffxiv"]

[workspace]
members = ["crates/core"]

[[bin]]
name = "nael"
path = "crates/cli/src/main.rs"

[dependencies]
nael_core = { path = "crates/core" }
anyhow = "1.0.79"
clap = { version = "4.5.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
colored = "2.1.0"
serde_json = "1.0.113"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
clone_on_ref_ptr = "warn"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
allow-dirty = ["ci"] # Allow adding custom steps to release CI
cargo-dist-version = "0.9.0"
ci = ["github"]
installers = []
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "skip"
