[package]
name = "nael"
description = "A Dalamud version manager that makes working with different releases of Dalamud simple."
version = "0.4.2"
authors = ["Blooym"]
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"
edition = "2021"
categories = ["command-line-utilities"]
repository = "https://github.com/Blooym/nael"
publish = true
keywords = ["dalamud", "version-manager", "cli", "ffxiv"]

[workspace]
members = ["crates/core"]

[[bin]]
name = "nael"
path = "crates/cli/src/main.rs"

[dependencies]
nael_core = { version = "0.4.2", path = "crates/core" }
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
colored = "3.0.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
clone_on_ref_ptr = "warn"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Which actions to run on pull requests
pr-run-mode = "skip"
