[package]
name = "nael_core"
authors = ["Blooym"]
description = "Internals for managing different installations of Dalamud."
version = "0.4.2"
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"
edition = "2021"
repository = "https://github.com/Blooym/nael"
publish = true
keywords = ["dalamud", "version-manager", "ffxiv"]

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
zip = "2.2.2"
anyhow = { version = "1.0.95", features = ["backtrace"] }
directories = "6.0.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.12", features = [
    "charset",
    "macos-system-configuration",
    "http2",
], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
symlink = "0.1.0"
tempfile = "3.16.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
clone_on_ref_ptr = "warn"
