[package]
name = "nael_core"
authors = ["Blooym"]
description = "Internals for managing different installations of Dalamud."
version = "0.4.4"
license = "MIT OR Apache-2.0"
rust-version = "1.85.0"
edition = "2024"
repository = "https://github.com/Blooym/nael"
publish = true
keywords = ["dalamud", "version-manager"]

[features]
default = ["rustls-tls"]
rustls-tls = ["reqwest/rustls-tls"]
native-tls = ["reqwest/native-tls"]

[dependencies]
zip = "2.6.1"
anyhow = { version = "1.0.97", features = ["backtrace"] }
directories = "6.0.0"
indicatif = "0.17.11"
reqwest = { version = "0.12.15", features = [
    "charset",
    "macos-system-configuration",
    "http2",
], default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
symlink = "0.1.0"
tempfile = "3.19.1"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
clone_on_ref_ptr = "warn"
